--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ h1, h2 {
 font-family: 'Bungee Spice', cursive;
 font-size: 20px;
 line-height: 10px;
-
 }
 
 h3 {
@@ -58,11 +57,8 @@ a:hover {
   margin: 0 auto;
   width: 799px;
 
-
 }
-.list-inline {
 
-}
 li {
   display: inline-block;
   font-size: 40px;
@@ -72,7 +68,7 @@ li {
 }
 
 .card {
-  color:brown;
+  color:rgb(134, 42, 6);
   background:rgb(225, 176, 176);
   border: 1px solid red;
   border-radius: 500px;
